--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,18 @@
 cmake_minimum_required(VERSION 3.3)
-project(conc_oop)
+project(mipt-concurrency)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread -Wall")
 
-set(SOURCE_FILES main.cpp)
-add_executable(conc_oop ${SOURCE_FILES})
+set(SOURCE_FILES main.cpp task-1/tree_mutex.cpp)
+add_executable(mipt-concurrency ${SOURCE_FILES})
+include_directories(task-1)
 
-add_subdirectory(task1)
+set(GTEST_ROOT /home/semyon/Apps/googletest)
+include_directories(${GTEST_ROOT} ${GTEST_ROOT}/include)
+
+add_subdirectory(task-1)
+add_subdirectory(tests)
+
+
+
+
