Reorganize task-1 directory. Fix blocking_queue. Add tests.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,3 +1,6 @@
 project(tests)
 
 add_subdirectory(${GTEST_ROOT} gtest) # no idea about second param
+
+add_executable(run_blocking_queue_test blocking_queue_test.cpp)
+target_link_libraries(run_blocking_queue_test gtest gtest_main)
