--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,10 @@ project(mipt-concurrency)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread -Wall")
 
-set(SOURCE_FILES main.cpp task-1/tree_mutex.cpp task-2/blocking_queue.h)
+set(SOURCE_FILES main.cpp
+        task-2/blocking_queue.h tests/blocking_queue_test.cpp
+        task-1/peterson_mutex.h task-1/peterson_mutex.cpp
+        task-1/tree_mutex.h task-1/tree_mutex.cpp  )
 add_executable(mipt-concurrency ${SOURCE_FILES})
 
 include_directories(task-1)
@@ -14,7 +17,9 @@ add_subdirectory(task-2)
 
 set(GTEST_ROOT /home/semyon/Apps/googletest)
 include_directories(${GTEST_ROOT} ${GTEST_ROOT}/include)
+target_link_libraries(mipt-concurrency gtest gtest_main)
 add_subdirectory(tests)
+
 
 
 
