Add prac directory for seminars exercises.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,11 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread -Wall")
 set(SOURCE_FILES main.cpp
         task-2/blocking_queue.h tests/blocking_queue_test.cpp
         task-1/peterson_mutex.h task-1/peterson_mutex.cpp
-        task-1/tree_mutex.h task-1/tree_mutex.cpp  )
+        task-1/tree_mutex.h task-1/tree_mutex.cpp prac/rw_mutex.h prac/ordered_mutex.h)
 add_executable(mipt-concurrency ${SOURCE_FILES})
+
+include_directories(prac)
+add_subdirectory(prac)
 
 include_directories(task-1)
 add_subdirectory(task-1)
