--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,3 +10,6 @@ target_link_libraries(run_thread_pool_test gtest gtest_main)
 
 add_executable(run_cyclic_barrier_test cyclic_barrier_test.cpp)
 target_link_libraries(run_cyclic_barrier_test gtest gtest_main)
+
+add_executable(run_concurrent_hash_set_test concurrent_hash_set_test.cpp)
+target_link_libraries(run_concurrent_hash_set_test gtest gtest_main)
