--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(mipt-concurrency)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread -Wall -g")
 
 set(SOURCE_FILES main.cpp
-        prac/rw_mutex.h prac/ordered_mutex.h prac/hash_table.h
+        prac/rw_mutex.h prac/ordered_mutex.h
         task-1/peterson_mutex.h task-1/peterson_mutex.cpp
         task-1/tree_mutex.h task-1/tree_mutex.cpp
         task-2/thread_pool.h tests/thread_pool_test.cpp
@@ -12,7 +12,9 @@ set(SOURCE_FILES main.cpp
         task-3/cyclic_barrier.h task-3/cyclic_barrier.cpp
         tests/cyclic_barrier_test.cpp
         task-3/semaphore.cpp task-3/semaphore.h
-        task-3/concurrent_hash_set.h tests/concurrent_hash_set_test.cpp)
+        task-3/concurrent_hash_set.h tests/concurrent_hash_set_test.cpp
+        prac/spinlock.h tests/spinlock_test.cpp
+        task-3/robot_sem.h task-3/robot_cond.h tests/robot_test.cpp)
 add_executable(mipt-concurrency ${SOURCE_FILES})
 
 include_directories(prac)
@@ -31,10 +33,3 @@ set(GTEST_ROOT /home/semyon/Apps/googletest)
 include_directories(${GTEST_ROOT} ${GTEST_ROOT}/include)
 target_link_libraries(mipt-concurrency gtest gtest_main)
 add_subdirectory(tests)
-
-
-
-
-
-
-
