--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ set(SOURCE_FILES main.cpp
         task-3/cyclic_barrier.h task-3/cyclic_barrier.cpp
         tests/cyclic_barrier_test.cpp
         task-3/semaphore.cpp task-3/semaphore.h
-        task-3/concurrent_hash_set.h tests/concurrent_hash_set_test.cpp
+        task-4/concurrent_hash_set.h tests/concurrent_hash_set_test.cpp
         prac/spinlock.h tests/spinlock_test.cpp
         task-3/robot_sem.h task-3/robot_cond.h tests/robot_test.cpp)
 add_executable(mipt-concurrency ${SOURCE_FILES})
@@ -28,6 +28,9 @@ add_subdirectory(task-2)
 
 include_directories(task-3)
 add_subdirectory(task-3)
+
+include_directories(task-4)
+add_subdirectory(task-4)
 
 set(GTEST_ROOT /home/semyon/Apps/googletest)
 include_directories(${GTEST_ROOT} ${GTEST_ROOT}/include)
